Fix grid alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
@@ -8,4 +9,43 @@ html {
 
 header {
 
+}
+
+main h1 {
+  font-family: Denk One;
+  color: #623b0c;
+  margin-left: 1.5rem;
+}
+
+h2 {
+  list-style-type: none;
+  color: #623b0c;
+  font-family: Denk One;
+}
+
+ol {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 1rem;
+  margin: 0;
+  padding; 1rem 0;
+}
+
+li {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background-color: #fff;
+  padding; 1.125rem;
+  border: 2px solid #623b0c;
+  border-radius: 8px 8px 8px 8px;
+  background-color: #ede3db;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-grow: 1;
+}
+
+img {
+  width: 100%;
 }
